Fix spacing issue introduced with new navbar style.
Webkit-based browsers did not have a margin between the rightmost entry
in the navbar and the border as they interpret the CSS different from
e.g. Mozilla.

refs #206

--- a/css/default_ie.css
+++ b/css/default_ie.css
@@ -188,13 +188,13 @@ table {
 
 #nav ul {
     list-style-type: none;
-    padding: 2px 0px 4px 6px;
+    padding: 2px 2px 2px 2px;
     margin: 0px;
 }
 
 #nav li {
     display: inline;
-    padding-right: 10px;
+    padding: 4px;
 }
 
 #nav a {
